Fix overflow issiues of side menu

--- a/app/assets/stylesheets/layout/_main_menu.sass
+++ b/app/assets/stylesheets/layout/_main_menu.sass
@@ -33,6 +33,7 @@ $toggler-width: 40px
   @include varprop(width, main-menu-width)
   @include varprop(min-width, main-menu-width)
   float: left
+  overflow-x: hidden
   left: 0
   border-right: $main-menu-border-width solid $main-menu-border-color
 
